# arches_graphql_client

./: pyproject.toml
.github/workflows/: python-publish.yml
arches_graphql_client/: __init__.py  __main__.py  client.py  concept.py  concept_utils.py  config.py  dask.py  definition.py  loader.py  mapper.py  resource.py  resource_model.py  utils.py
tests/: test_client.py  test_utils.py
