[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches-graphql-client"
version = "0.0.10"
authors = [
    {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
]
description = "Client for experimental Arches GraphQL API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "gql",
    "pandas",
    "dateparser",
    "geopandas",
    "shapely",
    "geojson",
    "pyproj",
    "python-slugify",
    "ray",
    "dask[distributed]",
]
